{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 565,
  "lineage": "4e6b3504-7720-4a1f-215e-a0286b949fd8",
  "resources": [
    {
      "module": "module.autosclaing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-js",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:475775181858:loadbalancer/app/prod-loadbalancer/6eb266b59169f7a5",
            "arn_suffix": "app/prod-loadbalancer/6eb266b59169f7a5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-loadbalancer-138431320.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:475775181858:loadbalancer/app/prod-loadbalancer/6eb266b59169f7a5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06ea1e84a28834c3c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-020e4b90670554c6b"
              },
              {
                "subnet_id": "subnet-09b36782b7bf9bd8d"
              },
              {
                "subnet_id": "subnet-0f841fef421c19de0"
              }
            ],
            "subnets": [
              "subnet-020e4b90670554c6b",
              "subnet-09b36782b7bf9bd8d",
              "subnet-0f841fef421c19de0"
            ],
            "vpc_id": "vpc-08febe15ee28da231",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.autosclaing.aws_security_group.js-sg",
            "module.vpc-prod.aws_subnet.pub1",
            "module.vpc-prod.aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "module": "module.autosclaing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:475775181858:listener/app/prod-loadbalancer/6eb266b59169f7a5/c21d078b36ab2d66",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:475775181858:targetgroup/prod-target-group/055910e9b9d77448",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:475775181858:listener/app/prod-loadbalancer/6eb266b59169f7a5/c21d078b36ab2d66",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:475775181858:loadbalancer/app/prod-loadbalancer/6eb266b59169f7a5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autosclaing.aws_lb.lb-js",
            "module.autosclaing.aws_lb_target_group.tg-js",
            "module.autosclaing.aws_security_group.js-sg",
            "module.vpc-prod.aws_subnet.pub1",
            "module.vpc-prod.aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "module": "module.autosclaing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-js",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:475775181858:targetgroup/prod-target-group/055910e9b9d77448",
            "arn_suffix": "targetgroup/prod-target-group/055910e9b9d77448",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:475775181858:targetgroup/prod-target-group/055910e9b9d77448",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08febe15ee28da231"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "module": "module.autosclaing",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "js-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:security-group/sg-06ea1e84a28834c3c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ea1e84a28834c3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-security_group",
            "name_prefix": "",
            "owner_id": "475775181858",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08febe15ee28da231"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:internet-gateway/igw-07ca32efeb181dcf2",
            "id": "igw-07ca32efeb181dcf2",
            "owner_id": "475775181858",
            "tags": {
              "Name": "𝒋𝒂𝒌𝒔-𝒊𝒏𝒕𝒆𝒓𝒏𝒆𝒕-𝒈𝒂𝒕𝒆𝒘𝒂𝒚"
            },
            "tags_all": {
              "Name": "𝒋𝒂𝒌𝒔-𝒊𝒏𝒕𝒆𝒓𝒏𝒆𝒕-𝒈𝒂𝒕𝒆𝒘𝒂𝒚"
            },
            "vpc_id": "vpc-04827f04d9c456630"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:route-table/rtb-003533b1a67e12e0e",
            "id": "rtb-003533b1a67e12e0e",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ca32efeb181dcf2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-𝒋𝒂𝒌𝒔🆁🅾🆄🆃🅴1☆☆╮"
            },
            "tags_all": {
              "Name": "-𝒋𝒂𝒌𝒔🆁🅾🆄🆃🅴1☆☆╮"
            },
            "timeouts": null,
            "vpc_id": "vpc-04827f04d9c456630"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.gw",
            "module.vpc-dev.aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:route-table/rtb-032e4cb1091c4e8a3",
            "id": "rtb-032e4cb1091c4e8a3",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ca32efeb181dcf2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "𝒋𝒂𝒌𝒔"
            },
            "tags_all": {
              "Name": "𝒋𝒂𝒌𝒔"
            },
            "timeouts": null,
            "vpc_id": "vpc-04827f04d9c456630"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.gw",
            "module.vpc-dev.aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063003d918c08d381",
            "route_table_id": "rtb-003533b1a67e12e0e",
            "subnet_id": "subnet-02e3858b4b760bc1a"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.gw",
            "module.vpc-dev.aws_route_table.rt",
            "module.vpc-dev.aws_subnet.pub1",
            "module.vpc-dev.aws_vpc.jeks",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:subnet/subnet-02e3858b4b760bc1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e3858b4b760bc1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "𝒋𝒂𝒌𝒔-𝐒𝐔𝐁𝐍𝐄𝐓1﹏﹏"
            },
            "tags_all": {
              "Name": "𝒋𝒂𝒌𝒔-𝐒𝐔𝐁𝐍𝐄𝐓1﹏﹏"
            },
            "vpc_id": "vpc-04827f04d9c456630"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.jeks",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jeks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:vpc/vpc-04827f04d9c456630",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-04fe6cef3e95b5965",
            "default_route_table_id": "rtb-0795c252c7eff9353",
            "default_security_group_id": "sg-0b032d70e714bbb98",
            "dhcp_options_id": "dopt-0cfef864defd981eb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04827f04d9c456630",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0795c252c7eff9353",
            "owner_id": "475775181858",
            "tags": {
              "Name": "𝒋𝒂𝒌𝒔-░V░P░C░"
            },
            "tags_all": {
              "Name": "𝒋𝒂𝒌𝒔-░V░P░C░"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:internet-gateway/igw-0eb38e6525a8439f8",
            "id": "igw-0eb38e6525a8439f8",
            "owner_id": "475775181858",
            "tags": {
              "Name": "prod-𝒊𝒏𝒕𝒆𝒓𝒏𝒆𝒕-𝒈𝒂𝒕𝒆𝒘𝒂𝒚"
            },
            "tags_all": {
              "Name": "prod-𝒊𝒏𝒕𝒆𝒓𝒏𝒆𝒕-𝒈𝒂𝒕𝒆𝒘𝒂𝒚"
            },
            "vpc_id": "vpc-08febe15ee28da231"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:route-table/rtb-0ae9cf6cc6fafd626",
            "id": "rtb-0ae9cf6cc6fafd626",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb38e6525a8439f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-prod🆁🅾🆄🆃🅴1☆☆╮"
            },
            "tags_all": {
              "Name": "-prod🆁🅾🆄🆃🅴1☆☆╮"
            },
            "timeouts": null,
            "vpc_id": "vpc-08febe15ee28da231"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.gw",
            "module.vpc-prod.aws_vpc.jeks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:route-table/rtb-0bc424dcf3892f124",
            "id": "rtb-0bc424dcf3892f124",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb38e6525a8439f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-prod🆁🅾🆄🆃🅴2☆☆╮"
            },
            "tags_all": {
              "Name": "-prod🆁🅾🆄🆃🅴2☆☆╮"
            },
            "timeouts": null,
            "vpc_id": "vpc-08febe15ee28da231"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.gw",
            "module.vpc-prod.aws_vpc.jeks"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:route-table/rtb-0d1fa06dbf4e309b5",
            "id": "rtb-0d1fa06dbf4e309b5",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb38e6525a8439f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-prod🆁🅾🆄🆃🅴3☆☆╮"
            },
            "tags_all": {
              "Name": "-prod🆁🅾🆄🆃🅴3☆☆╮"
            },
            "timeouts": null,
            "vpc_id": "vpc-08febe15ee28da231"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.gw",
            "module.vpc-prod.aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:route-table/rtb-008254a3e8f895ee0",
            "id": "rtb-008254a3e8f895ee0",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb38e6525a8439f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-08febe15ee28da231"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.gw",
            "module.vpc-prod.aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05205f8e19d7dbee2",
            "route_table_id": "rtb-0ae9cf6cc6fafd626",
            "subnet_id": "subnet-09b36782b7bf9bd8d"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.gw",
            "module.vpc-prod.aws_route_table.rt",
            "module.vpc-prod.aws_subnet.pub1",
            "module.vpc-prod.aws_vpc.jeks",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b4c6cb976a3be21",
            "route_table_id": "rtb-0bc424dcf3892f124",
            "subnet_id": "subnet-020e4b90670554c6b"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.gw",
            "module.vpc-prod.aws_route_table.rt",
            "module.vpc-prod.aws_subnet.pub1",
            "module.vpc-prod.aws_vpc.jeks",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05285f34461902ec1",
            "route_table_id": "rtb-0d1fa06dbf4e309b5",
            "subnet_id": "subnet-0f841fef421c19de0"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.gw",
            "module.vpc-prod.aws_route_table.rt",
            "module.vpc-prod.aws_subnet.pub1",
            "module.vpc-prod.aws_vpc.jeks",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:subnet/subnet-09b36782b7bf9bd8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b36782b7bf9bd8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-𝐒𝐔𝐁𝐍𝐄𝐓1﹏﹏"
            },
            "tags_all": {
              "Name": "prod-𝐒𝐔𝐁𝐍𝐄𝐓1﹏﹏"
            },
            "vpc_id": "vpc-08febe15ee28da231"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.jeks",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:subnet/subnet-020e4b90670554c6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020e4b90670554c6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-𝐒𝐔𝐁𝐍𝐄𝐓2﹏﹏"
            },
            "tags_all": {
              "Name": "prod-𝐒𝐔𝐁𝐍𝐄𝐓2﹏﹏"
            },
            "vpc_id": "vpc-08febe15ee28da231"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.jeks",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:subnet/subnet-0f841fef421c19de0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.5.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f841fef421c19de0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-𝐒𝐔𝐁𝐍𝐄𝐓3﹏﹏"
            },
            "tags_all": {
              "Name": "prod-𝐒𝐔𝐁𝐍𝐄𝐓3﹏﹏"
            },
            "vpc_id": "vpc-08febe15ee28da231"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.jeks",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jeks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475775181858:vpc/vpc-08febe15ee28da231",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-0dec7176132d7a232",
            "default_route_table_id": "rtb-024d6649766682b74",
            "default_security_group_id": "sg-003572e86c735d0c8",
            "dhcp_options_id": "dopt-0cfef864defd981eb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08febe15ee28da231",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024d6649766682b74",
            "owner_id": "475775181858",
            "tags": {
              "Name": "prod-░V░P░C░"
            },
            "tags_all": {
              "Name": "prod-░V░P░C░"
            }
          }
        }
      ]
    }
  ]
}